1 October 2008
+ Added option to use control panel fly out menu.
+ Dependency on new controlpanel.
+ Updated : templates/my_page/user_setting.tpl


23 September 2008
+ Moved security log before error page call.

17 September 2008
+ php 5 formatting added.
+ Session checks added to allow and authorized functions.
+ Fixed bug: activating and deactivating a user was not affecting the
  group (Thanks Verdon).
+ Script tag permission added (will require update)
+ Current_User's init function will create a blank user object if no
  id is sent to it.

8 September 2008
+ Template tag named PANEL added. More descriptive than MODULES
+ Added user panel named css.tpl and made it default. The template
  can be completely styled within css.
+ Updated: templates/usermenus/css.tpl

13 August 2008
+ Fixed  giveItemPermission function. Wasn't saving group permissions
  properly.

12 August 2008
+ Icons substituted from admin links.
+ Fixed registerpermissions function. Was missing content parameter.
+ Updated: img/permission.png

27 June 2008
+ Removed call to help module. Using new slider javascript instead.

19 June 2008
+ Added cacheQueries to the user pager. Delete was dropping preferences.
+ Added setRequired to username and email in user form.
+ Changed user template submit button
+ Updated : templates/forms/userForm.tpl

Version 2.5.0
-----------------------------------------------------------------------
5 June 2008
+ Added an error check to Permissions (Thanks Hilmar).

4 June 2008
+ Commented password creation table row.
+ Users will now look for remove_user.php in all modules' inc/
  directory in order to run the remove_user function.

3 June 2008
+ Using pager's addSortHeaders in user and group listing
+ Updated: templates/manager/groups.tpl, templates/manager/users.tpl

26 May 2008
+ Members' names alphabetized

29 April 2008
+ Fixed: choosing 'Do not notify' after creating a user was failing.

15 April 2008
+ Testing new user notification.