@@ -1,3 +1,7 @@
+2 October 2008
++ Reduced language list
++ Updated: conf/languages.php
+
 1 October 2008
 + Added option to use control panel fly out menu.
 + Dependency on new controlpanel.
